# semantic-intent-protocol

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  protocol_change.md
data/: README.md
docs/: architecture.md  capability-model.md  examples-walkthrough.md  examples.md  governance.md  overview.md  protocol-overview.md  protocol-spec-v0.1.md  python-sdk.md  quickstart.md  security-model.md  sip-wire-spec-v0.1.md  v0.1-status.md
docs/releases/: v0.1.1.md
examples/: capability_discovery_api_demo.py  distributed_brokers_demo.py  external_identity_demo.py  federation_demo.py  http_broker_demo.py  knowledge_retrieval.py  llm_proposed_intent.py  multi_agent_collaboration.py  network_troubleshooting.py  persistent_registry_demo.py  protocol_extensions_demo.py  public_intro_demo.py  restaurant_booking.py  sdk_basic_usage.py  sdk_broker_client_demo.py  sdk_capability_discovery_demo.py  sdk_provenance_demo.py
examples/end_to_end_demo/: broker_federation_demo.py  demo_overview.md  python_client_demo.py
protocol-vectors/: README.md  audit-record-basic.json  capability-descriptor-basic.json  execution-plan-basic.json  intent-envelope-basic.json  intent-envelope-with-provenance.json  negotiation-result-basic.json
schema/: README.md  sip-audit-record.schema.json  sip-capability-descriptor.schema.json  sip-execution-plan.schema.json  sip-intent-envelope.schema.json  sip-negotiation-result.schema.json
sdk/go/: go.mod
sip/: __init__.py  extensions.py
sip/broker/: __init__.py  discovery.py  federation.py  handlers.py  identity.py  service.py
sip/envelope/: __init__.py  (+2 more)
(+74 files in other folders)
